웹뷰 추가, 이미지 모듈 이미지 한 장 혹은 여러 장 일 때도 원본 비율 유지 되도록 수정, 몇 몇 버그 수정, 복사 지 사용 매수 보여주도록 수정 등
구글 독스 관련 기능은 참조가 불가능 해서 주석 처리

운영자님 정말 사랑합니다 진심 존경합니다 by Real 정우

--- a/Duty Tjssm/PhotoInsertModule.xaml
+++ b/Duty Tjssm/PhotoInsertModule.xaml
@@ -6,25 +6,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="217" d:DesignWidth="338">
     <Grid Background="Black" Height="217" Width="338">
-        <Canvas Name="mainCanvas"  MouseUp="mainCanvas_MouseUp" Height="217" Width="338" Margin="0">
-            <Canvas.Background>
-                <ImageBrush Stretch="Uniform" ImageSource="Resource/noImg.png"/>
-            </Canvas.Background>
-            <Canvas Height="25" Canvas.Left="299" Canvas.Top="10" Width="30" MouseUp="Canvas_MouseUp">
+        <Canvas Name="mainCanvas" Height="217" Width="338" Margin="0" MouseLeftButtonDown="mainCanvas_MouseLeftButtonDown" ToolTip="이미지 삽입">
+            <Canvas Height="25" Canvas.Left="299" Canvas.Top="10" Width="30" MouseLeftButtonDown="Canvas_MouseLeftButtonDown" ToolTip="이미지 회전" Panel.ZIndex="100">
                 <Canvas.Background>
                     <ImageBrush ImageSource="Resource/roatate2crop.png" Stretch="Uniform"/>
                 </Canvas.Background>
-            </Canvas>
-            <Canvas Height="25" Canvas.Left="264" Canvas.Top="10" Width="30" MouseUp="Canvas_MouseUp_1">
+            </Canvas >
+            <Canvas Height="25" Canvas.Left="299" Canvas.Top="182" Width="30" MouseLeftButtonDown="Canvas_MouseLeftButtonDown_2" ToolTip="초기화" Panel.ZIndex="100">
                 <Canvas.Background>
                     <ImageBrush ImageSource="Resource/rotate.png" Stretch="Uniform"/>
                 </Canvas.Background>
             </Canvas>
-            <Canvas Height="25" Canvas.Left="299" Canvas.Top="182" Width="30" MouseUp="Canvas_MouseUp_2">
-                <Canvas.Background>
-                    <ImageBrush ImageSource="Resource/rotate.png" Stretch="Uniform"/>
-                </Canvas.Background>
-            </Canvas>
+            <Image Panel.ZIndex="50" Stretch="Uniform" Name="img1" Canvas.Left="0" Canvas.Top="0" Width="338" Height="217" Source="Resource/noImg.png" RenderOptions.BitmapScalingMode="Fant"/>
+            <Image Stretch="Fill" Name="img2" Canvas.Left="169" Canvas.Top="108" Width="169" Height="108" Source="Resource/Noimage.png" RenderOptions.BitmapScalingMode="Fant"/>
+            <Image Stretch="Fill" Name="img3" Canvas.Top="0" Canvas.Left="169" Width="169" Height="108" Source="Resource/Noimage.png" RenderOptions.BitmapScalingMode="Fant"/>
+            <Image Stretch="Fill" Name="img4" Canvas.Top="108" Canvas.Left="0" Width="169" Height="108" Source="Resource/Noimage.png" RenderOptions.BitmapScalingMode="Fant"/>
         </Canvas>
     </Grid>
 </UserControl>
