--- a/Duty Tjssm/MainWindow.xaml
+++ b/Duty Tjssm/MainWindow.xaml
@@ -1,62 +1,76 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Duty_Tjssm" x:Class="Duty_Tjssm.MainWindow"
-        Title="MainWindow"  Width="982.555" Height="837.6" MinHeight="500" MinWidth="982" MaxWidth="982">
-    <Grid Margin="0,0,4,160">
-        <ScrollViewer Name="mainScroll" HorizontalAlignment="Left" Width="739" Margin="0,0,0,-158.4">
-            <Canvas Width="720" Height="2048" Name="mainCanvas" >
+        xmlns:local="clr-namespace:Duty_Tjssm" x:Class="Duty_Tjssm.MainWindow"        
+        Title="TJSSM DutyFree by MakerSIG"  Width="1500" Height="1000" MinHeight="500" MinWidth="982" Background="White">
+    <Grid Margin="0,0,0,0" Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="735" Name="G2" MaxWidth="735" MinWidth="360"/>
+            <ColumnDefinition Width="228"/>
+        </Grid.ColumnDefinitions>
+        <DockPanel Grid.Column="0" LastChildFill="True">
+            <WebBrowser Name="webview" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Loaded="webview_Loaded"/>
+        </DockPanel>
+        <GridSplitter Grid.Column="1"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Stretch"
+              Background="Black" 
+              ShowsPreview="True"
+              Width="5"
+           />
+        <ScrollViewer  Name="mainScroll" HorizontalAlignment="Left" Width="735" Grid.Column="2" Margin="0,0,0,0">
+            <Canvas Width="720" Height="2000" Name="mainCanvas" >
                 <Canvas.Background>
                     <ImageBrush ImageSource="Resource/dutyBG.png"/>
                 </Canvas.Background>
                 <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="179"/>
                 <local:PhotoInsertModule Canvas.Left="10" Canvas.Top="179"/>
-                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="614"/>
-                <local:PhotoInsertModule Canvas.Left="10" Canvas.Top="614"/>
-                <local:PhotoInsertModule Canvas.Left="8" Canvas.Top="1316"/>
-                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="1316"/>
-                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="1719"/>
-                <local:PhotoInsertModule Canvas.Left="8" Canvas.Top="1719"/>
-                <TextBlock Name="diTxtWorst" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="878" Height="28" Width="325" TextAlignment="Center" FontSize="20" Text=""/>
-                <TextBlock Name="diTxtBest" Canvas.Left="385" TextWrapping="Wrap" Canvas.Top="878" Height="28" Width="325" TextAlignment="Center" FontSize="20" Text=""/>
-                <TextBlock x:Name="diTxtMisson1" Canvas.Left="188" TextWrapping="Wrap" Canvas.Top="1209" Height="28" Width="478" FontSize="20" Text=""/>
-                <TextBlock x:Name="diTxtMisson2" Canvas.Left="188" TextWrapping="Wrap" Canvas.Top="1610" Height="28" Width="478" FontSize="20" Text=""/>
+                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="592"/>
+                <local:PhotoInsertModule Canvas.Left="10" Canvas.Top="592"/>
+                <local:PhotoInsertModule Canvas.Left="8" Canvas.Top="1269"/>
+                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="1269"/>
+                <local:PhotoInsertModule Canvas.Left="374" Canvas.Top="1672"/>
+                <local:PhotoInsertModule Canvas.Left="8" Canvas.Top="1672"/>
+                <TextBlock Name="diTxtWorst" Canvas.Left="385" TextWrapping="Wrap" Canvas.Top="856" Height="28" Width="325" TextAlignment="Center" FontSize="20" Text=""/>
+                <TextBlock Name="diTxtBest" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="856" Height="28" Width="325" TextAlignment="Center" FontSize="20" Text=""/>
+                <TextBlock x:Name="diTxtMisson1" Canvas.Left="195" TextWrapping="Wrap" Canvas.Top="1160" Height="28" Width="478" FontSize="20" Text="{Binding Text, ElementName=txtMission1}"/>
+                <TextBlock x:Name="diTxtMisson2" Canvas.Left="198" TextWrapping="Wrap" Canvas.Top="1559" Height="28" Width="478" FontSize="20" Text="{Binding Text, ElementName=txtMission2}"/>
 
 
             </Canvas>
         </ScrollViewer>
-        <ScrollViewer  HorizontalAlignment="right" Width="228" Margin="0,0,0,-148.4">
+        <ScrollViewer  HorizontalAlignment="right" Width="228" Grid.Column="3">
             <Grid >
                 <GroupBox Header="당직 수행 날짜" HorizontalAlignment="Left" Margin="5,6,0,0" VerticalAlignment="Top" Height="64" Width="199">
                     <Grid Margin="0,0,0,-0.4">
                         <DatePicker x:Name="dutyDataPicker"  HorizontalAlignment="Left"  VerticalAlignment="Top" Margin="0,10,0,0"/>
                         <CheckBox x:Name="dutyTimeCheckBox" Content="주간 당직"  HorizontalAlignment="Left" Margin="109,14,0,0" VerticalAlignment="Top"/>
-
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="베스트워스트" HorizontalAlignment="Left" Margin="5,72,0,0" VerticalAlignment="Top" Height="84" Width="201">
-                    <Grid HorizontalAlignment="Left" Height="66" Margin="0,0,-3,-22.8" VerticalAlignment="Top" Width="191">
+                <GroupBox Header="베스트워스트" HorizontalAlignment="Left" Margin="5,72,0,0" VerticalAlignment="Top" Height="108" Width="201">
+                    <Grid HorizontalAlignment="Left" Height="88" Margin="0,0,-2,-2" VerticalAlignment="Top" Width="191">
                         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Best" VerticalAlignment="Top"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="50,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="97" x:Name="txtBest"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="50,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="131" x:Name="txtBest"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,40,0,0" TextWrapping="Wrap" Text="Worst" VerticalAlignment="Top" RenderTransformOrigin="0.625,1.625"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="50,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="97" x:Name="txtWorst"/>
-                        <Button Content="입력" HorizontalAlignment="Left" Margin="152,10,0,0" VerticalAlignment="Top" Width="29" Height="46" x:Name="btnNameinput"/>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="50,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="131" x:Name="txtWorst"/>
+                        <Button Content="입력" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" Width="171" Height="21" x:Name="btnNameinput"/>
 
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="미션" HorizontalAlignment="Left" Margin="5,155,0,0" VerticalAlignment="Top" Height="110" Width="199">
+                <GroupBox Header="미션" HorizontalAlignment="Left" Margin="7,185,0,0" VerticalAlignment="Top" Height="90" Width="199">
                     <Grid Margin="0,0,0.4,-0.4">
 
 
                         <TextBox Name="txtMission1" Height="23" Margin="12,10,8.4,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                        <TextBox Name="txtMission2" HorizontalAlignment="Left" Height="23" Margin="12,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="166"/>
+                        <TextBox Name="txtMission2" HorizontalAlignment="Left" Height="23" Margin="12,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="167"/>
                         <TextBlock HorizontalAlignment="Left" Margin="0,14,0,0" TextWrapping="Wrap" Text="1." VerticalAlignment="Top"/>
                         <TextBlock HorizontalAlignment="Left"  Margin="0,44,0,0" TextWrapping="Wrap" Text="2." VerticalAlignment="Top"/>
-                        <Button Name="btnMission" Content="입력" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="166" />
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="기타등등" HorizontalAlignment="Left" Margin="5,270,0,0" VerticalAlignment="Top" Height="520" Width="201">
-                    <Grid HorizontalAlignment="Left" Margin="0,-6,-7,-2.6" Width="195">
+                <GroupBox Header="기타 등등" HorizontalAlignment="Left" Margin="7,280,0,0" VerticalAlignment="Top" Height="512" Width="201">
+                    <Grid HorizontalAlignment="Left" Margin="0,-6,-6,-22" Width="195">
                         <Label Content="2층" HorizontalAlignment="Left" Margin="0,12,0,0" VerticalAlignment="Top"/>
                         <Label Content="체단실" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top"/>
                         <Label Content="화장실" HorizontalAlignment="Left" Margin="0,64,0,0" VerticalAlignment="Top"/>
@@ -70,10 +84,13 @@
                         <Label Content="대미나" HorizontalAlignment="Left" Margin="0,277,0,0" VerticalAlignment="Top"/>
                         <Label Content="소미나" HorizontalAlignment="Left" Margin="0,301,0,0" VerticalAlignment="Top"/>
                         <Label Content="수면실" HorizontalAlignment="Left" Margin="0,327,0,0" VerticalAlignment="Top"/>
-                        <Button Content="클립보드 복사" HorizontalAlignment="Left" Height="22" Margin="100,451,0,0" VerticalAlignment="Top" Width="85" RenderTransformOrigin="0.665,1.642" Click="Button_Click_1"/>
+                        <Button Content="클립보드 복사" HorizontalAlignment="Left" Height="22" Margin="10,470,0,0" VerticalAlignment="Top" Width="175" RenderTransformOrigin="0.665,1.642" Click="Button_Click_1"/>
                         <Label Content="복사기 사용량" HorizontalAlignment="Left" Margin="0,358,0,0" VerticalAlignment="Top"/>
                         <Label Content="기준매수" HorizontalAlignment="Left" Margin="0,384,0,0" VerticalAlignment="Top"/>
                         <Label Content="현재매수" HorizontalAlignment="Left" Margin="0,410,0,0" VerticalAlignment="Top"/>
+                        <Label Content="사용매수" HorizontalAlignment="Left" Margin="0,436,0,0" VerticalAlignment="Top"/>
+                        <TextBlock Text="" HorizontalAlignment="Left" Margin="62,442,0,0" Name="tbt14" VerticalAlignment="Top" Width="123" TextAlignment="Right"/>
+
                         <TextBox HorizontalAlignment="Left" Height="23" Margin="52,38,0,0" TextWrapping="Wrap" Text="" Name="tbt1" VerticalAlignment="Top" Width="133"/>
                         <TextBox HorizontalAlignment="Left" Height="23" Margin="52,64,0,0" TextWrapping="Wrap" Text="" Name="tbt2" VerticalAlignment="Top" Width="133"/>
                         <TextBox HorizontalAlignment="Left" Height="23" Margin="52,91,0,0" TextWrapping="Wrap" Text="" Name="tbt3" VerticalAlignment="Top" Width="133"/>
@@ -86,14 +103,14 @@
                         <TextBox HorizontalAlignment="Left" Height="23" Margin="52,304,0,0" TextWrapping="Wrap" Text=""  Name="tbt10" VerticalAlignment="Top" Width="133"/>
                         <TextBox HorizontalAlignment="Left" Height="23" Margin="52,330,0,0" TextWrapping="Wrap" Text=""  Name="tbt11" VerticalAlignment="Top" Width="133"/>
 
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="62,384,0,0" TextWrapping="Wrap" Text=""  Name="tbt12" VerticalAlignment="Top" Width="123"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="62,411,0,0" TextWrapping="Wrap" Text=""  Name="tbt13" VerticalAlignment="Top" Width="123"/>
-                        <Button Content="이미지로 저장" HorizontalAlignment="Left" Height="22" Margin="10,478,0,0" VerticalAlignment="Top" Width="175" RenderTransformOrigin="0.665,1.642" Click="Button_Click" PreviewMouseDown="Button_PreviewMouseDown"/>
-
+                        <local:NTextBox HorizontalAlignment="Left" Height="23" Margin="62,387,0,0" TextWrapping="Wrap" Text=""  x:Name="tbt12" VerticalAlignment="Top" Width="123" TextAlignment="Right"/>
+                        <local:NTextBox HorizontalAlignment="Left" Height="23" Margin="62,414,0,0" TextWrapping="Wrap" Text=""  x:Name="tbt13" VerticalAlignment="Top" Width="123" TextAlignment="Right"/>
                     </Grid>
                 </GroupBox>
+                <Button Content="이미지로 저장" HorizontalAlignment="Left" Height="38" Margin="7,804,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.665,1.642" Click="Button_Click" PreviewMouseDown="Button_PreviewMouseDown" FontSize="16"/>
             </Grid>
         </ScrollViewer>
+
 
 
 
